--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -22,7 +22,7 @@
     <!-- Main Content -->
     <main>
         <!-- History Section -->
-        <article id="history">
+        <article>
             <h2>History</h2>
             <p>
                 TechCon began in 2010 with a vision to bring together technology enthusiasts, professionals, and innovators 
@@ -32,7 +32,7 @@
         </article>
 
         <!-- Mission Section -->
-        <article id="mission">
+        <article>
             <h2>Our Mission</h2>
             <p>
                 At TechCon, our mission is to inspire innovation, foster collaboration, and provide a platform for showcasing 
@@ -42,7 +42,7 @@
         </article>
 
         <!-- Past Speakers Section -->
-        <article id="past-speakers">
+        <article>
             <h2>Notable Past Speakers</h2>
             <div>
                 <img src="speaker1.jpg" alt="Photo of Dr. Jane Smith" width="150">
