--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -62,7 +62,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p>&copy; 2024 TechCon. All rights reserved. This website includes the word copyright.</p>
     </footer>
 </body>
 </html>
